# Medusa

./: .gitignore  HowToBuild  LICENSE  README.md
Algorithm/: CMakeLists.txt  CPUFunctorHoster.cpp  CPUFunctorHoster.h  Configuration.h  Edge.h  EdgeDataType.cu  EdgeDataType.h  InitMessage.h  MessageDataType.h  MsgCombiner.h  UserOperators.h  Vertex.h  VertexDataType.cu  VertexDataType.h  main.cu
Compatibility/: Compatability.h
MBFS/: CPUFunctorHoster.cpp  DeviceDataStructure.h  EdgeDataType.h  Message.h  MessageDataType.cu  MessageDataType.h  Vertex.h  VertexDataType.h  main.cu
MPG/: CPUFunctorHoster.cpp  CPUFunctorHoster.h  Configuration.h  DeviceDataStructure.h  Edge.h  EdgeDataType.cu  EdgeDataType.h  Makefile  Message.h  MessageDataType.cu  MessageDataType.h  MsgCombiner.h  UserOperators.h  Vertex.h  VertexDataType.cu  VertexDataType.h  main.cu
MedusaRT/: APIKernelWrappers.h  CUDAOpenglInterop.cu  CUDAOpenglInterop.h  Combiner.cu  Combiner.h  GraphConverter.cu  GraphConverter.h  GraphGenerator.cu  GraphGenerator.h  GraphReader.cpp  GraphReader.h  GraphRenderingAPI.cu  GraphRenderingAPI.h  GraphStorage.cu  GraphStorage.h  HMMSMA.h  HMMUtilGPU.h  MessageArrayManager.cu  MessageArrayManager.h  OpenglSettings.cu  OpenglSettings.h  PublicAPI.cu  PublicAPI.h  SystemLibCPU.cu  SystemLibCPU.h  SystemLibGPU.h  Utilities.cu  Utilities.h
MultipleGPU/: GPUDef.h  Gather.cu  MultiAPIHoster.h  MultiGraphStorage.cu  MultiGraphStorage.h  MultiPublicAPI.h  MultiUtilities.h  PartitionManager.cu  PartitionManager.h  WEQueue.cpp  WEQueue.h
SSSP/: CPUFunctorHoster.cpp  CPUFunctorHoster.h  Configuration.h  DeviceDataStructure.h  Edge.h  EdgeDataType.cu  EdgeDataType.h  Message.h  MessageDataType.cu  MessageDataType.h  MsgCombiner.h  UserOperators.h  Vertex.h  VertexDataType.cu  VertexDataType.h  main.cu
Tools/: RegularityAnalysis.cpp  RegularityAnalysis.h  ReplicaNumberAnalysis.cpp  ReplicaNumberAnalysis.h
datasets/: .gitignore
